--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         h1, h2, h3, h4 { font-family: 'Playfair Display', serif; }
         
         .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://scontent-cdg4-3.xx.fbcdn.net/v/t39.30808-6/530713405_10238403224683211_6332449775376785043_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=110&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=5UnSJq6zoRgQ7kNvwHObz8_&_nc_oc=Admq0qT2Ct-0UaskTqZ6X9wgBkMugHVdmmWwzRTDJuBC5rqBiT1RFcZ4XyEY7RRkEns&_nc_zt=23&_nc_ht=scontent-cdg4-3.xx&_nc_gid=s7_zmP04SKU0qPY9srbOPw&oh=00_Afnf6jiaUmnocb65vTjyubjQ-8D5e8t_t3U4AGZa8VsAGw&oe=694FA3A2');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('1.jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed; /* Effet parallaxe simple */
