--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                 </div>
                 <!-- Image d'illustration salon/intérieur -->
                 <div class="rounded-xl overflow-hidden shadow-2xl h-80 md:h-96 relative">
-                    <img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/586327299_122134946144970291_4025788190287885043_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=f727a1&_nc_ohc=UdTbRQGmrZIQ7kNvwEld49Q&_nc_oc=AdmA3lMgpyIKOrHFyrIcw0NMYZX-hHWezbps8ay8ccw43Me3_WZGnA-zdnCXV02BIMA&_nc_zt=23&_nc_ht=scontent-cdg4-2.xx&_nc_gid=qpkMC6WySEiiZVHpCtOEWQ&oh=00_AfllfARxYKYLIxyI8jDijziwxXjbE6zEtfkscQfnQGxcrw&oe=694F910C" 
-                         alt="Salon lumineux du gîte" 
+                    <img src="7.jpeg" 
+                         alt="Séjour lumineux du gîte" 
                          class="w-full h-full object-cover">
                          <div class="absolute bottom-4 right-4 bg-white/90 px-3 py-1 text-xs text-gray-500 rounded backdrop-blur">Le Salon</div>
                 </div>
@@ -214,7 +214,7 @@
                 <div class="group bg-brand-beige rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                     <div class="h-64 overflow-hidden relative">
                         <!-- Placeholder : À remplacer par photo Chambre 1 -->
-                        <img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/531770247_122102061884970291_4256440549353282339_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=QgnMeI35VusQ7kNvwGiXNSx&_nc_oc=Adk7LtoXWbpmQmakBBks4T_O7W-PpTpu-rcfvrPTeEJ1k0ZtpBUlF7ptOYKo28Bta_I&_nc_zt=23&_nc_ht=scontent-cdg4-2.xx&_nc_gid=Rrettu2qBDaXf_UXbNR2RQ&oh=00_Aflq6Zp3WHrgHFgm38XO-BOtjaOaI3kBpzLWwG-jQ-gBMA&oe=694F7D79" 
+                        <img src="10.jpeg" 
                              alt="Chambre 1" 
                              class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
                     </div>
@@ -235,7 +235,7 @@
                 <div class="group bg-brand-beige rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                     <div class="h-64 overflow-hidden relative">
                         <!-- Placeholder : À remplacer par photo Chambre 2 -->
-                        <img src="https://scontent-cdg4-3.xx.fbcdn.net/v/t39.30808-6/529960506_122102059886970291_7602801917805767108_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=bdZFBJRvBwYQ7kNvwH8Lfj_&_nc_oc=Adn9PcyC7woUivcO_XoLRZDRJHsS7yRuRriRgJvwT8UrGCzf8qziR86bbKxyARMelUM&_nc_zt=23&_nc_ht=scontent-cdg4-3.xx&_nc_gid=O1ucIAo--QRx03WxbrYIHw&oh=00_Afllc3zhVWSL0feQKyztcP4Z7SMZcSrM-yLC5Yt_H72jQA&oe=694F89CC" 
+                        <img src="12.jpeg" 
                              alt="Chambre 2" 
                              class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
                     </div>
@@ -256,7 +256,7 @@
                 <div class="group bg-brand-beige rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                     <div class="h-64 overflow-hidden relative">
                         <!-- Placeholder : À remplacer par photo Chambre 3 -->
-                        <img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/530516954_122102059634970291_2682617824518151870_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=vnZUXgx0WJ0Q7kNvwEIQC7D&_nc_oc=AdkivdLmGlQX5Fhe7AsiA5DdnTTAIs8EnycbxSZ_hQbjZg8w582v3D-q40_uCCABT-0&_nc_zt=23&_nc_ht=scontent-cdg4-2.xx&_nc_gid=ioutwciKKl6JxSgyIi2Jlw&oh=00_Afl-yd-a7Q75wo6nbX0dvhq6VwK7-8bjqQQfNMl7ZScHCw&oe=694FA09A" 
+                        <img src="11.jpeg" 
                              alt="Chambre 3" 
                              class="w-full h-full object-cover group-hover:scale-105 transition duration-500">
                     </div>
