--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <img src="7.jpeg" 
                          alt="Séjour lumineux du gîte" 
                          class="w-full h-full object-cover">
-                         <div class="absolute bottom-4 right-4 bg-white/90 px-3 py-1 text-xs text-gray-500 rounded backdrop-blur">Le Salon</div>
+                         <div class="absolute bottom-4 right-4 bg-white/90 px-3 py-1 text-xs text-gray-500 rounded backdrop-blur">Le Séjour</div>
                 </div>
             </div>
         </div>
