--- a/index.html
+++ b/index.html
@@ -431,40 +431,40 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 auto-rows-[200px]">
                 <!-- Item 1 (Grand) -->
                 <div class="gallery-item md:col-span-2 md:row-span-2 h-full">
-                    <img src="https://scontent-cdg4-1.xx.fbcdn.net/v/t39.30808-6/530224182_122102061704970291_5977523513934211382_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=ZlI8Qip4R-kQ7kNvwGQ_rHB&_nc_oc=Adkykp049lAcAZ64_q1F8EqC6uBxwWQwsNBs_1yLmZ3Bk39PGy06oRI9PC-SmdwS9zo&_nc_zt=23&_nc_ht=scontent-cdg4-1.xx&_nc_gid=4mDtNDmzqllLtCP7doNjBQ&oh=00_AfmJD5zSD6iKKG_nEquHxjaQBCTnAbbqs9xR5LC2DYvsmQ&oe=694FA3BB" 
-                         alt="Piscine extérieure (Illustration)" 
+                    <img src="3.jpeg" 
+                         alt="Extérieure" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'La piscine privée')">
+                         onclick="openLightbox(this.src, 'Extérieure')">
                 </div>
                 
                 <!-- Item 2 -->
                 <div class="gallery-item h-full">
-                    <img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/530516954_122102059634970291_2682617824518151870_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=vnZUXgx0WJ0Q7kNvwEIQC7D&_nc_oc=AdkivdLmGlQX5Fhe7AsiA5DdnTTAIs8EnycbxSZ_hQbjZg8w582v3D-q40_uCCABT-0&_nc_zt=23&_nc_ht=scontent-cdg4-2.xx&_nc_gid=Efg3MzY42v8SqAfynPD8TQ&oh=00_Afl7s-JnIEbnDorM1ETXC2Qt2Q1HnzL18R1iLckZOCP5ig&oe=694FA09A" 
-                         alt="Cuisine équipée (Illustration)" 
+                    <img src="13.jpeg" 
+                         alt="Canal du Midi" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'Cuisine ouverte')">
+                         onclick="openLightbox(this.src, 'Canal du Midi')">
                 </div>
 
                 <!-- Item 3 -->
                 <div class="gallery-item h-full">
-                    <img src="https://scontent-cdg4-3.xx.fbcdn.net/v/t39.30808-6/529960506_122102059886970291_7602801917805767108_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=bdZFBJRvBwYQ7kNvwH8Lfj_&_nc_oc=Adn9PcyC7woUivcO_XoLRZDRJHsS7yRuRriRgJvwT8UrGCzf8qziR86bbKxyARMelUM&_nc_zt=23&_nc_ht=scontent-cdg4-3.xx&_nc_gid=Zw4bcy-kNYOBMgFT9yociw&oh=00_AfkEdVTgPsQ60_rowQmNB6rHzklg2Jn-W-RteeSbD9Wfug&oe=694F89CC" 
-                         alt="Chambre principale (Illustration)" 
+                    <img src="5.jpeg" 
+                         alt="Parking Privée" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'Chambre double confortable')">
+                         onclick="openLightbox(this.src, 'Parking Privée')">
                 </div>
 
                 <!-- Item 4 -->
                 <div class="gallery-item h-full">
-                    <img src="https://scontent-cdg4-2.xx.fbcdn.net/v/t39.30808-6/530481941_122102062850970291_3543122688758698614_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_ohc=IocVhnJf4bIQ7kNvwF9D57B&_nc_oc=AdlWj6IAtXPcQUktw6P6I2MY4tHnaBLo94zX60LHQ8u3K8_lgBjTlSdDydagxgw58vE&_nc_zt=23&_nc_ht=scontent-cdg4-2.xx&_nc_gid=g4xDySxlf0EfGaGq03wfBA&oh=00_Afn61Uy8raG3KIrFhhIQyTRyx-boX6DeYbhUlyAO_Yi97Q&oe=694F8667" 
-                         alt="Façade maison (Illustration)" 
+                    <img src="14.jpeg" 
+                         alt="Cuisine Équipée" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'Extérieur de la maison')">
+                         onclick="openLightbox(this.src, 'Cuisine Équipée')">
                 </div>
 
                 <!-- Item 5 -->
                 <div class="gallery-item h-full">
-                    <img src="https://scontent-cdg4-3.xx.fbcdn.net/v/t39.30808-6/531547229_122102059334970291_8753353561095801469_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=pkheh6z8tHsQ7kNvwFPGjQW&_nc_oc=AdkOmwp-x5gmmvYcC4W5AnWpvTmgbylyMUVrWCz0sj--OaGnhTyiVowmKFar1H09Jgs&_nc_zt=23&_nc_ht=scontent-cdg4-3.xx&_nc_gid=4aydUONtRk37tnpzQKeikQ&oh=00_AfkiqlDYa8TZipVh-d95iQyTGDkA3t7eDqh95DE9hveaYQ&oe=694F81EA" 
-                         alt="Salle de bain (Illustration)" 
+                    <img src="9.jpeg" 
+                         alt="Salle de bain" 
                          loading="lazy"
                          onclick="openLightbox(this.src, 'Salle de bain')">
                 </div>
