--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
             <!-- Logo / Nom -->
             <a href="#" class="flex items-center">
-                <img src="https://scontent-cdg4-1.xx.fbcdn.net/v/t39.30808-6/530098694_10238403138921067_4035908434291067206_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=XD56mELN38cQ7kNvwGxni3b&_nc_oc=Adknf2e7C9BHVvZeS1BchhQWmyfQYL7f1JVKPqLVPteclvz4x7W25X-g0TJ9Pdytjmg&_nc_zt=23&_nc_ht=scontent-cdg4-1.xx&_nc_gid=6Yjv6cSIfnRijOb9PoLUpg&oh=00_Afk7aaYX0CtZmvzmk3tChQ8654lNSSYwafexAihYurHkmw&oe=69503EBA" 
+                <img src="logo.png" 
                      alt="Logo Gîte Lamagistère" 
                      class="h-16 w-auto object-contain rounded-lg">
             </a>
