--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
                 <!-- Item 1 (Grand) -->
                 <div class="gallery-item md:col-span-2 md:row-span-2 h-full">
                     <img src="3.jpeg" 
-                         alt="Extérieure" 
+                         alt="Extérieur" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'Extérieure')">
+                         onclick="openLightbox(this.src, 'Extérieur')">
                 </div>
                 
                 <!-- Item 2 -->
