--- a/index.html
+++ b/index.html
@@ -448,9 +448,9 @@
                 <!-- Item 3 -->
                 <div class="gallery-item h-full">
                     <img src="5.jpeg" 
-                         alt="Parking Privée" 
+                         alt="Parking Privé" 
                          loading="lazy"
-                         onclick="openLightbox(this.src, 'Parking Privée')">
+                         onclick="openLightbox(this.src, 'Parking Privé')">
                 </div>
 
                 <!-- Item 4 -->
