--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <header class="fixed w-full top-0 z-50 bg-white/95 backdrop-blur-sm shadow-md transition-all duration-300">
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
             <a href="#" class="flex items-center">
-                <img src="logo.png" 
+                <img src="logo.webp" 
                      alt="Logo Gîte Lamagistère" 
                      width="100" height="64"
                      class="h-16 w-auto object-contain rounded-lg">
