--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 }
         /* Fallback pour les vieux navigateurs si besoin (optionnel) */
         .no-webp .hero-bg {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('1.jpeg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('1.webp');
         }
 
         .gallery-item { cursor: pointer; transition: transform 0.3s ease; overflow: hidden; border-radius: 8px; }
