--- a/index.html
+++ b/index.html
@@ -464,65 +464,107 @@
     </section>
 
     <section id="reserver" class="py-20 bg-white">
-        <div class="container mx-auto px-4 max-w-4xl">
-            <div class="bg-brand-beige rounded-2xl shadow-xl overflow-hidden">
-                <div class="md:flex">
-                    <div class="md:w-1/3 bg-brand-green text-white p-8 flex flex-col justify-between">
-                        <div>
-                            <h3 class="text-2xl font-serif mb-6">Contactez-nous</h3>
-                            <p class="mb-6 opacity-90 text-sm">Réponse rapide garantie.</p>
-                            <div class="space-y-4">
-                                <a href="tel:+33674295629" class="flex items-center gap-3 hover:text-brand-gold transition">
-                                    <i class="fa-solid fa-phone"></i>
-                                    <span class="font-bold">06 74 29 56 29</span>
-                                </a>
-                                <a href="mailto:lacouture82360@gmail.com" class="flex items-center gap-3 hover:text-brand-gold transition break-all">
-                                    <i class="fa-solid fa-envelope"></i>
-                                    <span>lacouture82360@gmail.com</span>
-                                </a>
-                            </div>
+    <div class="container mx-auto px-4 max-w-4xl">
+        <div class="bg-brand-beige rounded-2xl shadow-xl overflow-hidden">
+            <div class="md:flex">
+                <div class="md:w-1/3 bg-brand-green text-white p-8 flex flex-col justify-between">
+                    <div>
+                        <h3 class="text-2xl font-serif mb-6">Contactez-nous</h3>
+                        <p class="mb-6 opacity-90 text-sm">Réponse rapide garantie.</p>
+                        <div class="space-y-4">
+                            <a href="tel:+33674295629" class="flex items-center gap-3 hover:text-brand-gold transition">
+                                <i class="fa-solid fa-phone"></i>
+                                <span class="font-bold">06 74 29 56 29</span>
+                            </a>
+                            <a href="mailto:lacouture82360@gmail.com" class="flex items-center gap-3 hover:text-brand-gold transition break-all">
+                                <i class="fa-solid fa-envelope"></i>
+                                <span>lacouture82360@gmail.com</span>
+                            </a>
                         </div>
                     </div>
-                    <div class="md:w-2/3 p-8">
-                        <h3 class="text-xl font-bold text-gray-800 mb-4">Demande de réservation</h3>
-                        <form id="bookingForm" class="space-y-4">
-                            <div class="grid md:grid-cols-2 gap-4">
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Nom complet</label>
-                                    <input type="text" id="name" required class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none" placeholder="Votre nom">
-                                </div>
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Téléphone</label>
-                                    <input type="tel" id="phone" required class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none" placeholder="06 XX XX XX XX">
-                                </div>
+                </div>
+
+                <div class="md:w-2/3 p-8">
+                    <h3 class="text-xl font-bold text-gray-800 mb-4">Demande de réservation</h3>
+
+                    <script>var submitted = false;</script>
+                    
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
+                            onload="if(submitted) {window.location='#'; alert('Merci ! Votre demande a bien été envoyée. Nous vous répondrons très vite.'); document.getElementById('google-form').reset();}">
+                    </iframe>
+
+                    <form id="google-form" 
+                          action="https://docs.google.com/forms/d/e/1FAIpQLSd0BSvKnd0kdPmuOBuSC5yZVeQpcWyycEXC_JZlptY-xiyiRA/formResponse" 
+                          method="POST" 
+                          target="hidden_iframe" 
+                          onsubmit="submitted=true;"
+                          class="space-y-4">
+
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Nom complet</label>
+                                <input type="text" name="entry.2060813657" required 
+                                       class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none" 
+                                       placeholder="Votre nom">
                             </div>
                             <div>
-                                <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-                                <input type="email" id="email" required class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Téléphone</label>
+                                <input type="tel" name="entry.1509692478" required 
+                                       class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none" 
+                                       placeholder="06 XX XX XX XX">
                             </div>
-                             <div class="grid md:grid-cols-2 gap-4">
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Arrivée</label>
-                                    <input type="date" id="arrival" class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
-                                </div>
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Départ</label>
-                                    <input type="date" id="departure" class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
-                                </div>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                            <input type="email" name="entry.1066567479" required 
+                                   class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
+                        </div>
+
+                        <div class="mb-2">
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Type de séjour</label>
+                            <div class="flex gap-6">
+                                <label class="flex items-center cursor-pointer group">
+                                    <input type="radio" name="entry.1403111543" value="Privé / Vacances" checked
+                                           class="w-4 h-4 text-brand-green border-gray-300 focus:ring-brand-green accent-brand-green">
+                                    <span class="ml-2 text-gray-700 group-hover:text-brand-green transition">Privé / Vacances</span>
+                                </label>
+                                <label class="flex items-center cursor-pointer group">
+                                    <input type="radio" name="entry.1403111543" value="Professionnel" 
+                                           class="w-4 h-4 text-brand-green border-gray-300 focus:ring-brand-green accent-brand-green">
+                                    <span class="ml-2 text-gray-700 group-hover:text-brand-green transition">Professionnel</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Arrivée</label>
+                                <input type="date" name="entry.1016213967" required 
+                                       class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
                             </div>
                             <div>
-                                <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
-                                <textarea id="message" rows="3" class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none"></textarea>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Départ</label>
+                                <input type="date" name="entry.1013901624" required 
+                                       class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none">
                             </div>
-                            <button type="submit" class="w-full bg-brand-green hover:bg-brand-dark text-white font-bold py-3 rounded transition shadow-md flex justify-center items-center gap-2">
-                                <i class="fa-regular fa-paper-plane"></i> Envoyer la demande par email
-                            </button>
-                        </form>
-                    </div>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+                            <textarea name="entry.2059232096" rows="3" 
+                                      class="w-full px-4 py-2 border border-gray-300 rounded focus:ring-2 focus:ring-brand-green outline-none"></textarea>
+                        </div>
+
+                        <button type="submit" class="w-full bg-brand-green hover:bg-brand-dark text-white font-bold py-3 rounded transition shadow-md flex justify-center items-center gap-2">
+                            <i class="fa-regular fa-paper-plane"></i> Envoyer la demande
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <footer class="bg-gray-900 text-gray-300 py-10 border-t border-gray-800">
         <div class="container mx-auto px-4">
@@ -563,21 +605,6 @@
             link.addEventListener('click', () => {
                 menu.classList.add('hidden');
             });
-        });
-
-        document.getElementById('bookingForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const phone = document.getElementById('phone').value;
-            const email = document.getElementById('email').value;
-            const arrival = document.getElementById('arrival').value;
-            const departure = document.getElementById('departure').value;
-            const message = document.getElementById('message').value;
-
-            const subject = "Demande de réservation - Gîte Lamagistère";
-            const body = `Bonjour,\n\nJe souhaite faire une demande de réservation.\n\nNom: ${name}\nTéléphone: ${phone}\nEmail: ${email}\n\nDates souhaitées:\nArrivée: ${arrival}\nDépart: ${departure}\n\nMessage:\n${message}`;
-
-            window.location.href = `mailto:lacouture82360@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
         });
 
         function openLightbox(src, caption) {
